<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FGM Songs</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="lord">L\&#39;ETERNEL</string>
    <string name="sing">Chantez</string>
    <string name="praises">les louanges </string>
    <string name="of">de</string>
    <string name="descLogo">Logo FGM</string>
    <string name="fullGospelMission">Mission du Plein Evangile</string>

    
	  <string name="action_search">Search</string>
	  <string name="action_record">Record Video</string>
	  <string name="action_save">Save</string>
	  <string name="action_label">Add Label</string>
	  <string name="action_play">Play Video</string>
  
  
    <!-- Edit song choices -->
    <string-array name="edit_song_choices">
        <item >Modify</item>
        <item >Delete</item>     
    </string-array>
    
      <!-- Nav Drawer Menu Items -->
    <string-array name="nav_drawer_items">
        <item >List of songs</item>
        <item >Search a song</item>
        <item >Add a song</item>
        <item >Edit a song</item>
        <item >Summary</item>
        <item >Options</item>
        <item >About</item>
        <item >Home</item>
    </string-array>
    
    <string-array name="language_options">
        <item>English</item>
        <item>French</item>
    </string-array>
     
    <!-- Nav Drawer List Item Icons -->
    <!-- Keep them in order as the titles are in -->
    <array name="nav_drawer_icons">
        <item>R.drawable.ic_action_view_as_list</item>
        <item>R.drawable.ic_action_search</item>
        <item>R.drawable.ic_action_new</item>
        <item>R.drawable.ic_action_edit</item>
        <item>R.drawable.ic_action_sort_by_size</item>
        <item>R.drawable.ic_action_settings</item>
        <item>R.drawable.ic_action_about</item>
    </array>
     
    <!-- Content Description -->
    <string name="desc_list_item_icon">Item Icon</string>
    <string name="drawer_open">Open Navigation Drawer</string>
    <string name="drawer_close">Close Navigation Drawer</string>
    <string name="empty"> </string>
    <string name="home_first_verse">&quot;I WILL BLESS THE LORD ## AT ALL TIMES</string>
    <string name="home_second_verse">HIS PRAISE SHALL CONTINUALLY ## BE IN MY MOUTH.&quot;</string>
    <string name="psalms_34_2">Psalms 34.2</string>
    <string name="songs">Songs</string>
    <string name="search_song">Search a song</string>
    <string name="cancel">Cancel</string>
    <string name="validate">Validate</string>
    <string name="language">Language</string>
    <string name="english">English</string>
    <string name="french">French</string>
    <string name="select_language">Select a language</string>
    <string name="title">Title</string>
    <string name="hint_title">Type the title of the song</string>
    <string name="verse">Verse</string>
    <string name="hint_verse">Add a new verse of the song</string>
    <string name="add_new_verse">Add new verse</string>
    <string name="of_the">of the</string>
    <string name="no_empty_verse">The verse is empty. Please write something in</string>
    <string name="delete">Delete</string>
    <string name="no_verse_to_display">No verse to display</string>
    <string name="no_file_found">No file found</string>
    <string name="confirm_deletion">Do you really want to delete this song ?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="song_deleted">Song deleted</string>
    <string name="no_editable_songs">You have no personal song</string>
    <string name="ok">OK</string>
    <string name="song_updated">Song updated</string>
    <string name="fgm_songs">Full Gospel Mission Songs</string>
    <string name="author">Author : </string>
    <string name="company">Company : </string>
    <string name="programer">Programer : </string>
    <string name="contact">Contact : </string>
    <string name="version">Version : </string>
    <string name="fgmsongs_author">  Inspired by God</string>
    <string name="fgmsongs_programer">  McCyrille</string>
    <string name="fgm_contact">  contact@intelness.com</string>
    <string name="intelness">Intelness</string>
    <string name="no_empty_title">The title is empty. Please write a title</string>
    <string name="register">Register</string>
    <string name="delete_song">Delete song</string>
    <string name="copy_song">Copy song</string>
    <string name="edit_song">Modify song</string>
    <string name="make_choice">Make a choice</string>
    <string name="loading">Loading &#x2026;</string>
    <string name="list_number_songs">Choose a song number</string>
</resources>
