<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.intelness.fgmsongs.SplashActivity"
    android:background="@drawable/splash" >

    <TextView
        android:id="@+id/tvSing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="44dp"
        android:text="@string/sing"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/tvPraises"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvSing"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="14dp"
        android:text="@string/praises"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/tvOf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvPraises"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="18dp"
        android:text="@string/of_the"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/tvFullGospelMission"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="52dp"
        android:contentDescription="@string/descLogo"
        android:src="@drawable/ic_launcher" />

    <TextView
        android:id="@+id/tvFullGospelMission"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="92dp"
        android:gravity="center"
        android:text="@string/fullGospelMission"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="@dimen/fgm_size" />

    <TextView
        android:id="@+id/tvLord"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvOf"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:text="@string/lord"
        android:textAppearance="?android:attr/textAppearanceLarge" />

</RelativeLayout>
